server/k8s/3_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: board-server
  name: board-server
  namespace: board
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: board-server
  type: NodePort
