server/k8s/5_ingress_rest.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-server-rest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: board
spec:
  rules:
    - http:
        paths:
          - path: /api/(.+)
            pathType: Prefix
            backend:
              service:
                name: board-server
                port:
                  number: 80
